--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="nova_viagem">Nova viagem</string>
     <string name="minhas_viagens">Minhas viagens</string>
     <string name="configuracoes">Configurações</string>
+
+    <string-array name="categoria_gasto">
+        <item>Alimentação</item>
+        <item>Combustível</item>
+        <item>Transporte</item>
+        <item>Hospedagem</item>
+        <item>Outros</item>
+    </string-array>
 </resources>
